--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
         創造屬於你的超能人。</h3>
 </div>
 
-<div class="container text-danger banner-text-h2 d-lg-none">
+<div class="container text-white banner-text-h2 d-lg-none">
     <div class="row justify-content-center text-center">
-        <div class="col">
-            (換裝體驗僅提供電腦版裝置)<br>
+        <div class="col" style="color: #FFFA80">
+            ⚠️ 換裝功能已上架！歡迎至電腦版體驗 ⚠️
         </div>
     </div>
 </div>
@@ -408,7 +408,7 @@
 <div class="container-fluid" id="roadmap">
     <div class="row justify-content-center">
         <div class="col-10">
-            <div class="text-center bg-dark lighting-div my-5 py-3 roadmap-box radius-3">
+            <div class="text-center bg-dark lighting-div my-0 my-md-5 py-3 roadmap-box radius-3">
                 <h2 class="text-white banner-text-h1 py-5">Roadmap</h2>
 
                 <!-- 10% -->
@@ -561,10 +561,10 @@
     <ul class="row mb-3">
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_1" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
+                <a href="#faq_1" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
                 <div class="collapse" id="faq_1">
-                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
                             WANA 是位在 Sol 鏈上的一顆星球，通過擁有我們的 NFT 可以進入 Web3.0 新世界的旅程來創新，一種自由與包容的共同創造體驗，和我們一起創造宇宙吧！
                         </p>
@@ -575,10 +575,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_2" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
+                <a href="#faq_2" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
                 <div class="collapse" id="faq_2">
-                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
                             待定。
                         </p>
@@ -589,10 +589,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_3" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
+                <a href="#faq_3" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
                 <div class="collapse" id="faq_3">
-                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
                             Mint價格第一波為1 SOL。
                         </p>
@@ -603,10 +603,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_4" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
+                <a href="#faq_4" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
                 <div class="collapse" id="faq_4">
-                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
                             作為NFT持有者，您可以擁有屬於自己鏈上的NFT，可以選擇持有或販售，在未來路線圖規劃，您將可以替NFT更換您喜愛的造型、依造型算力獲得豐厚獎勵。
                         </p>
@@ -617,12 +617,12 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_5" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
+                <a href="#faq_5" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
                 <div class="collapse" id="faq_5">
-                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
-                            你可以在Solana Art上購買。
+                            您可以在Solana Art上購買。
                         </p>
                     </div>
                 </div>
@@ -631,14 +631,14 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_6" class="text-base banner-text-h2 text-decoration-none stretched-link text-start text-lg-center px-md-5 ps-4 ps-sm-5"
+                <a href="#faq_6" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
                    data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
                 <div class="collapse" id="faq_6">
-                    <div class="card-body banner-text-h4 mx-3 mx-md-5">
+                    <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
                             1、切勿與任何人分享您的私鑰或助記詞。<br>
                             2、切勿單擊通過 Discord、Twitter 或其他渠道上的直接消息發送給您的網址。<br>
-                            3、僅信任在本網站或官方 Discord 服務器上頻道中發布的官方信息。<br>
+                            3、僅信任在本網站或官方 Discord 服務器上頻道中發佈的官方信息。<br>
                         </p>
                     </div>
                 </div>
