--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             </div>
             <div class="col-12 col-md-3">
                 <div class="d-flex flex-row">
-                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
-                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
-                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
-                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="40" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="40" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="40" alt="facebook"/></a>
                 </div>
             </div>
         </div>
@@ -671,10 +671,10 @@
             </div>
             <div class="col-12">
                 <div class="d-flex flex-row justify-content-center">
-                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.png" height="40" alt="instagram"/></a>
-                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.png" height="40" alt="discord"/></a>
-                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.png" height="40" alt="twitter"/></a>
-                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.png" height="40" alt="facebook"/></a>
+                    <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="40" alt="instagram"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="40" alt="twitter"/></a>
+                    <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="40" alt="facebook"/></a>
                 </div>
             </div>
         </div>
