--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta name="description" content="WANA! Create your own WAVATAR." />
-    <meta property="og:title" content="WANA! Create your own WAVATAR." />
+    <meta property="og:title" content="WANA" />
     <meta property="og:image" content="https://wanawallet.co/assets/logo/WANA_LOGO.png">
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
