update Discord link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-12 col-md-3">
                 <div class="d-flex flex-row">
                     <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="40" alt="instagram"/></a>
-                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
                     <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="40" alt="twitter"/></a>
                     <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="40" alt="facebook"/></a>
                 </div>
@@ -80,7 +80,7 @@
     <!-- 品牌動圖 -->
     <div class="join-discord-btn d-flex justify-content-center">
         <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
-            <a href="https://discord.com/channels/942427470165061673/942698736084213802" class="text-white text-decoration-none" target="_blank">JOIN DISCORD</a>
+            <a href="https://discord.com/invite/PJv2U32JNJ" class="text-white text-decoration-none" target="_blank">JOIN DISCORD</a>
         </div>
     </div>
 </div>
@@ -177,7 +177,7 @@
 <!-- TODO 下拉三角形與作動 -->
 <div class="d-flex justify-content-center mt-5 pt-5">
     <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
-        <a href="https://discord.com/channels/942427470165061673/942698736084213802" class="text-white text-decoration-none px-2" target="_blank">JOIN DISCORD</a>
+        <a href="https://discord.com/invite/PJv2U32JNJ" class="text-white text-decoration-none px-2" target="_blank">JOIN DISCORD</a>
     </div>
 </div>
 
@@ -672,7 +672,7 @@
             <div class="col-12">
                 <div class="d-flex flex-row justify-content-center">
                     <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/InstagramLogo.svg" height="40" alt="instagram"/></a>
-                    <a class="nav-link text-white" href="https://discord.com/channels/942427470165061673/942698736084213802" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
+                    <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/DiscordLogo.svg" height="40" alt="discord"/></a>
                     <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/TwitterLogo.svg" height="40" alt="twitter"/></a>
                     <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/FacebookLogo.svg" height="40" alt="facebook"/></a>
                 </div>
