--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div class="container text-start">
     <div class="row mb-5">
         <div class="col-12 col-lg-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_1.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_1.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -119,7 +119,7 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-5 order-first order-lg-last">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_2.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_2.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -130,7 +130,7 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_3.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_3.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -141,7 +141,7 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-5 order-first order-lg-last">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/Animate_4.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_4.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -191,7 +191,7 @@
 <div class="container">
     <div class="row justify-content-center text-center align-items-center">
         <div class="col-12 col-lg-6">
-            <img src="assets/image/FivePhases.png" class="img-fluid"/>
+            <img src="assets/image/five_phases.png" class="img-fluid"/>
         </div>
         <div class="col-12 col-lg-6">
             <div class="container-fluid text-center py-5">
@@ -508,7 +508,7 @@
         <div class="swiper-wrapper py-3">
             <div class="swiper-slide">
                 <div class="card article-card bg-base">
-                    <img class="article-image" src="assets/image/article1.png"/>
+                    <img class="article-image" src="assets/image/article_thunbnail_1.png"/>
                     <div class="card-body text-white">
                         <h5 class="card-title banner-text-h4">SANDBOX?</h5>
                         <p class="card-text">
@@ -520,7 +520,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="card article-card bg-base">
-                    <img class="article-image" src="assets/image/article2.png"/>
+                    <img class="article-image" src="assets/image/article_thunbnail_2.png"/>
                     <div class="card-body text-white">
                         <h5 class="card-title banner-text-h4">名人堂</h5>
                         <p class="card-text">
@@ -532,7 +532,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="card article-card bg-base">
-                    <img class="article-image" src="assets/image/article3.png"/>
+                    <img class="article-image" src="assets/image/article_thunbnail_3.png"/>
                     <div class="card-body text-white">
                         <h5 class="card-title banner-text-h4">漫畫連載</h5>
                         <p class="card-text">
