--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
                     </div>
-                    <div class="swiper-button-prev dress-eyes dress-btn move-left-4 btn bg-base text-white"><</div>
-                    <div class="swiper-button-next dress-eyes dress-btn move-right-4 btn bg-base text-white">></div>
+                    <div class="swiper-button-prev dress-eyes scale-2x0 move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-eyes scale-2x0 move-right-4 btn bg-base text-white">></div>
                 </div>
 
                 <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
@@ -256,8 +256,8 @@
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
                     </div>
-                    <div class="swiper-button-prev dress-clothes dress-btn move-left-4 btn bg-base text-white"><</div>
-                    <div class="swiper-button-next dress-clothes dress-btn move-right-4 btn bg-base text-white">></div>
+                    <div class="swiper-button-prev dress-clothes scale-2x0 move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-clothes scale-2x0 move-right-4 btn bg-base text-white">></div>
                 </div>
 
             </div>
@@ -342,8 +342,8 @@
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
                     </div>
-                    <div class="swiper-button-prev dress-hair dress-btn move-left-4 btn bg-base text-white"><</div>
-                    <div class="swiper-button-next dress-hair dress-btn move-right-4 btn bg-base text-white">></div>
+                    <div class="swiper-button-prev dress-hair scale-2x0 move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-hair scale-2x0 move-right-4 btn bg-base text-white">></div>
                 </div>
                 <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
                     <!-- 配件 background -->
@@ -358,8 +358,8 @@
                         <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
                     </div>
-                    <div class="swiper-button-prev dress-background dress-btn move-left-4 btn bg-base text-white"><</div>
-                    <div class="swiper-button-next dress-background dress-btn move-right-4 btn bg-base text-white">></div>
+                    <div class="swiper-button-prev dress-background scale-2x0 move-left-4 btn bg-base text-white"><</div>
+                    <div class="swiper-button-next dress-background scale-2x0 move-right-4 btn bg-base text-white">></div>
                 </div>
             </div>
         </div>
@@ -503,7 +503,7 @@
     <h2 class="text-white banner-text-h1 py-5">超能人新手村</h2>
 </div>
 <!-- 第二三部分 文章滑動區塊-->
-<div class="container-sm">
+<div class="container-sm position-relative">
     <div class="swiper article px-3">
         <div class="swiper-wrapper py-3">
             <div class="swiper-slide">
@@ -545,11 +545,11 @@
         </div>
         <div class="swiper-pagination"></div>
 
-        <div class="swiper-button-prev btn btn-circle bg-white text-black"><</div>
-        <div class="swiper-button-next btn btn-circle bg-white text-black">></div>
-
         <div class="swiper-scrollbar"></div>
     </div>
+
+    <div class="swiper-button-prev article scale-1x25 btn btn-circle bg-white text-black fw-bold">＜</div>
+    <div class="swiper-button-next article scale-1x25 btn btn-circle bg-white text-black fw-bold">＞</div>
 </div>
 
 <!-- 第二四部分 FAQ-->
