update article CSS

--- a/index.html
+++ b/index.html
@@ -506,10 +506,10 @@
 <div class="container-sm position-relative">
     <div class="swiper article px-3">
         <div class="swiper-wrapper py-3">
-            <div class="swiper-slide">
-                <div class="card article-card bg-base">
-                    <img class="article-image" src="assets/image/article_thunbnail_1.png"/>
-                    <div class="card-body text-white">
+            <div class="swiper-slide h-auto">
+                <div class="card article-card bg-base h-100">
+                    <img class="img-fluid article-image" src="assets/image/article_thunbnail_1.png"/>
+                    <div class="card-body text-white p-lg-4">
                         <h5 class="card-title banner-text-h4">SANDBOX?</h5>
                         <p class="card-text">
                             虛擬世界的土地可以改建、買賣！🤩元宇宙目前的領跑者《 The Sandbox 》
@@ -518,10 +518,10 @@
                     <a class="stretched-link" href="https://www.instagram.com/p/Ca2Ok-NPwEE/?utm_medium=copy_link" target="_blank"></a>
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="card article-card bg-base">
-                    <img class="article-image" src="assets/image/article_thunbnail_2.png"/>
-                    <div class="card-body text-white">
+            <div class="swiper-slide h-auto">
+                <div class="card article-card bg-base h-100">
+                    <img class="img-fluid article-image" src="assets/image/article_thunbnail_2.png"/>
+                    <div class="card-body text-white p-lg-4">
                         <h5 class="card-title banner-text-h4">名人堂</h5>
                         <p class="card-text">
                             WANA名人堂！本週繪製的是 #寶博朋友說 Podcast 最新一集來賓
@@ -530,10 +530,10 @@
                     <a class="stretched-link" href="https://www.instagram.com/p/Ca9ywAuPyFj/?utm_medium=copy_link" target="_blank"></a>
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="card article-card bg-base">
-                    <img class="article-image" src="assets/image/article_thunbnail_3.png"/>
-                    <div class="card-body text-white">
+            <div class="swiper-slide h-auto">
+                <div class="card article-card bg-base h-100">
+                    <img class="img-fluid article-image" src="assets/image/article_thunbnail_3.png"/>
+                    <div class="card-body text-white p-lg-4">
                         <h5 class="card-title banner-text-h4">漫畫連載</h5>
                         <p class="card-text">
                             ABEL擁有超能力，他在星球上都在做些什麼呢？
