--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <title>WANA</title>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <meta name="description" content="WANA! Create your own WAVATAR." />
-    <meta property="og:title" content="WANA" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="description" content="WANA! Create your own WAvatar." />
+    <meta name="keywords" content="WANA, WANA-Wallet, NFT">
+    <meta property="og:title" content="WANA NFT" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="WANA! Create your own WAvatar." />
     <meta property="og:image" content="https://wanawallet.co/assets/logo/WANA_LOGO.png">
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
@@ -28,11 +30,10 @@
             <div class="col-12 col-md-9">
                 <div class="d-flex flex-row">
                     <a href="#" class="navbar-brand">
-                        <h1 class="d-none">WANA</h1>
                         <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
                     </a>
             
-                    <div class="d-flex flex-row align-items-center">
+                    <div class="d-flex flex-row align-items-center user-select-none">
                         <a class="nav-link text-white" href="#about">About</a>
                         <a class="nav-link text-white" href="#roadmap">Roadmap</a>
                         <a class="nav-link text-white" href="#faq">FAQ</a>
@@ -98,7 +99,7 @@
 
 <!-- 第四部分 嘿，一起拯救WANA星球吧！ -->
 <div class="container-fluid text-center">
-    <h2 class="text-white banner-text-h1 py-5 my-5" id="about">嘿，一起拯救WANA星球吧！</h2>
+    <h1 class="text-white banner-text-h1 py-5 my-5" id="about">嘿，一起拯救WANA星球吧！</h1>
 </div>
 
 <!-- 第五部分 A&N-->
@@ -154,7 +155,7 @@
 
 <!-- 第六部分 成為家族中的一員-->
 <div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-h1 py-5">成為獨一無二的 WANA 超能人</h2>
+    <h1 class="text-white banner-text-h1 py-5">成為獨一無二的 WANA 超能人</h1>
 </div>
 <!-- 第七部分 人物區-->
 <div class="swiper character">
@@ -183,7 +184,7 @@
 <div class="bg-magic-linear">
     <!-- 第九部分 成為WANA Pixel超人後，你擁有的超能力！獲得家族皮膚，跟你的家族夥伴一同奮戰！-->
     <div class="container-fluid text-center py-5 my-5">
-        <h3 class="text-white banner-text-h1">你擁有的能力！</h3>
+        <h1 class="text-white banner-text-h1">你擁有的能力！</h1>
         <h3 class="text-white banner-text-h2">獲得家族皮膚，跟你的家族夥伴一同奮戰！</h3>
     </div>
 
@@ -385,7 +386,7 @@
 
 <!-- 第十六部分 配件稀有度-->
 <div class="container-fluid text-center py-0 py-md-5">
-    <h2 class="text-white banner-text-h1 py-0 px-md-5">配件稀有度</h2>
+    <h1 class="text-white banner-text-h1 py-0 px-md-5">配件稀有度</h1>
 </div>
 
 <!-- 第十七部分 配件金字塔-->
@@ -412,7 +413,7 @@
     <div class="row justify-content-center">
         <div class="col-10">
             <div class="text-center bg-dark lighting-div my-0 my-md-5 py-3 roadmap-box radius-3">
-                <h2 class="text-white banner-text-h1 py-5">Roadmap</h2>
+                <h1 class="text-white banner-text-h1 py-5">Roadmap</h1>
 
                 <!-- 10% -->
                 <div class="row py-5 mb-3">
@@ -503,7 +504,7 @@
 
 <!-- 第二二部分 超能人新手村-->
 <div class="container-fluid text-center py-5">
-    <h2 class="text-white banner-text-h1 py-5">超能人新手村</h2>
+    <h1 class="text-white banner-text-h1 py-5">超能人新手村</h1>
 </div>
 <!-- 第二三部分 文章滑動區塊-->
 <div class="container-sm position-relative">
@@ -557,15 +558,17 @@
 
 <!-- 第二四部分 FAQ-->
 <div class="container-fluid text-center py-5" id="faq">
-    <h2 class="text-white banner-text-h1">FAQ</h2>
+    <h1 class="text-white banner-text-h1">FAQ</h1>
 </div>
 <!-- 第二五部分 answer-->
 <div class="container">
     <ul class="row mb-3">
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_1" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
-                   data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_1" class="stretched-link text-base text-decoration-none"
+                       data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
+                </h3>
                 <div class="collapse" id="faq_1">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
@@ -578,8 +581,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_2" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
-                   data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_2" class="stretched-link text-base text-decoration-none"
+                       data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
+                </h3>
                 <div class="collapse" id="faq_2">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
@@ -592,8 +597,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_3" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
-                   data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_3" class="stretched-link text-base text-decoration-none"
+                       data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
+                </h3>
                 <div class="collapse" id="faq_3">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
@@ -606,8 +613,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_4" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
-                   data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_4" class="stretched-link text-base text-decoration-none"
+                       data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
+                </h3>
                 <div class="collapse" id="faq_4">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
@@ -620,8 +629,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_5" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
-                   data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_5" class="stretched-link text-base text-decoration-none"
+                       data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
+                </h3>
                 <div class="collapse" id="faq_5">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
@@ -634,8 +645,10 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white faq-box py-4 mx-4">
-                <a href="#faq_6" class="text-base banner-text-h2 text-decoration-none stretched-link text-start px-md-5 ps-4 ps-sm-5"
-                   data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
+                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                    <a href="#faq_6" class="stretched-link text-base text-decoration-none"
+                       data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
+                </h3>
                 <div class="collapse" id="faq_6">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5">
                         <p>
