些微調整註解位置

--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                         <!-- 主體 -->
                         <div class="main-body-box mx-5 px-5">
 
-                            <div class="main-body">
-                                <!-- 主體 eyes 眼睛 -->
-                                <div class="swiper dress-eyes" style="z-index: 4">
+                            <!-- 主體 eyes 眼睛 -->
+                            <div class="main-body" style="z-index: 4">
+                                <div class="swiper dress-eyes">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/eyes/E2.png" class="img-fluid"/></div>
                                         <div class="swiper-slide"><img src="assets/layers-demo/eyes/E3.png" class="img-fluid"/></div>
@@ -281,9 +281,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="main-body">
-                                <!-- 主體 clothes 衣服 -->
-                                <div class="swiper dress-clothes" style="z-index: 2">
+                            <!-- 主體 clothes 衣服 -->
+                            <div class="main-body" style="z-index: 2">
+                                <div class="swiper dress-clothes">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/clothes/C2.png" class="img-fluid"/></div>
                                         <div class="swiper-slide"><img src="assets/layers-demo/clothes/C4.png" class="img-fluid"/></div>
@@ -293,8 +293,8 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- 主體 hair 頭髮 -->
                             <div class="main-body" style="z-index: 3">
-                                <!-- 主體 hair 頭髮 -->
                                 <div class="swiper dress-hair">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/hair/H2.png" class="img-fluid"/></div>
@@ -305,8 +305,8 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- 主體 background 背景色 -->
                             <div class="main-body" style="z-index: 0">
-                                <!-- 主體 background 背景色 -->
                                 <div class="swiper dress-background">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/background/BG1.png" class="img-fluid"/></div>
@@ -317,8 +317,8 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- 主體 skin 身體 -->
                             <div class="main-body" style="z-index: 1">
-                                <!-- 主體 skin 身體 -->
                                 <img src="assets/layers-demo/skins/Body.png" class="img-fluid"/>
                             </div>
                         </div>
