--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>WANA</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <meta name="description" content="WANA! Create your own WAvatar." />
+    <meta name="description" content="WANA! Create your own WAvatar."/>
     <meta name="keywords" content="WANA, WANA-Wallet, NFT">
-    <meta property="og:title" content="WANA NFT" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="WANA! Create your own WAvatar." />
+    <meta property="og:title" content="WANA NFT"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="WANA! Create your own WAvatar."/>
     <meta property="og:image" content="https://wanawallet.co/assets/logo/WANA_LOGO.png">
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.css">
@@ -30,9 +30,9 @@
             <div class="col-12 col-md-9">
                 <div class="d-flex flex-row">
                     <a href="#" class="navbar-brand">
-                        <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
+                        <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo"/>
                     </a>
-            
+
                     <div class="d-flex flex-row align-items-center user-select-none">
                         <a class="nav-link text-white" href="#about">About</a>
                         <a class="nav-link text-white" href="#roadmap">Roadmap</a>
@@ -43,7 +43,7 @@
                         <a class="nav-link disabled" href="#">MyWANA</a>
                     </div>
                 </div>
-    
+
             </div>
             <div class="col-12 col-md-3">
                 <div class="d-flex flex-row">
@@ -59,7 +59,7 @@
     <div class="row d-block d-xl-none">
         <div class="col-6 col-lg-4 offset-3 offset-lg-4 collapse bg-base py-3 py-sm-5" id="hamburgerMenu">
             <a href="#" class="navbar-brand">
-                <img src="assets/logo/LOGO-W.png" class="img-fluid" alt="WANA-Logo" />
+                <img src="assets/logo/LOGO-W.png" class="img-fluid" alt="WANA-Logo"/>
             </a>
             <ul class="d-flex flex-column list-unstyled menu text-center mt-3 py-3 py-sm-5">
                 <li><a class="nav-link text-white" href="#about">About</a></li>
@@ -87,7 +87,7 @@
 </div>
 
 <!-- 第三部分 Mint Coming soon... -->
-<div class="container d-flex justify-content-center position-relative move-up-5">
+<div class="container d-flex justify-content-center position-relative mv-up-5">
     <div class="col-10 bg-base mint-coming-soon">
         <h3 class="text-white h1">0 / 999</h3>
         <div class="text-white mb-2 h4 py-3">Mint Coming Soon...</div>
@@ -212,23 +212,15 @@
             創造屬於你的超能人。</h3>
     </div>
 
-    <div class="container text-white banner-text-h2 d-lg-none">
-        <div class="row justify-content-center text-center">
-            <div class="col" style="color: #FFFA80">
-                ⚠️ 換裝功能已上架！歡迎至電腦版體驗 ⚠️
-            </div>
-        </div>
-    </div>
-
     <!-- 第十三部分 成為家族中的一員-->
-    <div class="container d-none d-lg-block py-5 my-5">
-        <div class="row py-5">
-            <div class="col-lg-3">
-                <div class="d-flex flex-column align-items-center justify-content-between h-100">
+    <div class="container position-relative py-5 my-5">
+        <div class="row justify-content-center py-5 mv-up-0x375 mv-up-lg-0">
+            <div class="col-12 col-lg-3">
+                <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
 
-                    <div class="col-lg-8 dress-accessory-box move-up-half bg-accessory-linear">
+                    <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-up-lg-0x5 bg-accessory-linear">
                         <!-- 配件 eyes -->
-                        <div class="swiper dress-eyes">
+                        <div class="swiper dress-eyes radius-1x5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="assets/layers-demo/eyes/E2.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/eyes/E3.png" class="img-fluid"/></div>
@@ -236,16 +228,14 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/eyes/E9.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/eyes/E10.png" class="img-fluid"/></div>
                             </div>
-                            <div class="swiper-pagination"></div>
-                            <div class="swiper-scrollbar"></div>
                         </div>
-                        <div class="swiper-button-prev dress-eyes scale-2x0 move-left-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-eyes scale-2x0 move-right-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-eyes scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-eyes scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
                     </div>
 
-                    <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
+                    <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x0 mv-down-lg-0x5 bg-accessory-linear">
                         <!-- 配件 clothes -->
-                        <div class="swiper dress-clothes">
+                        <div class="swiper dress-clothes radius-1x5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="assets/layers-demo/clothes/C2.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/clothes/C4.png" class="img-fluid"/></div>
@@ -253,25 +243,22 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/clothes/C9.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/clothes/C10.png" class="img-fluid"/></div>
                             </div>
-                            <div class="swiper-pagination"></div>
-                            <div class="swiper-scrollbar"></div>
                         </div>
-                        <div class="swiper-button-prev dress-clothes scale-2x0 move-left-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-clothes scale-2x0 move-right-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-clothes scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-clothes scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
                     </div>
 
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-12 col-sm-9 col-lg-6 order-first order-lg-0">
                 <div class="d-flex justify-content-center">
-                    <div class="col-lg-10">
+                    <div class="col-10">
 
                         <!-- 主體 -->
                         <div class="main-body-box mx-5 px-5">
-
                             <!-- 主體 eyes 眼睛 -->
                             <div class="main-body" style="z-index: 4">
-                                <div class="swiper dress-eyes">
+                                <div class="swiper dress-eyes radius-1x5">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/eyes/E2.png" class="img-fluid"/></div>
                                         <div class="swiper-slide"><img src="assets/layers-demo/eyes/E3.png" class="img-fluid"/></div>
@@ -283,7 +270,7 @@
                             </div>
                             <!-- 主體 clothes 衣服 -->
                             <div class="main-body" style="z-index: 2">
-                                <div class="swiper dress-clothes">
+                                <div class="swiper dress-clothes radius-1x5">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/clothes/C2.png" class="img-fluid"/></div>
                                         <div class="swiper-slide"><img src="assets/layers-demo/clothes/C4.png" class="img-fluid"/></div>
@@ -295,7 +282,7 @@
                             </div>
                             <!-- 主體 hair 頭髮 -->
                             <div class="main-body" style="z-index: 3">
-                                <div class="swiper dress-hair">
+                                <div class="swiper dress-hair radius-1x5">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/hair/H2.png" class="img-fluid"/></div>
                                         <div class="swiper-slide"><img src="assets/layers-demo/hair/H3.png" class="img-fluid"/></div>
@@ -307,7 +294,7 @@
                             </div>
                             <!-- 主體 background 背景色 -->
                             <div class="main-body" style="z-index: 0">
-                                <div class="swiper dress-background">
+                                <div class="swiper dress-background radius-1x5">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide"><img src="assets/layers-demo/background/BG1.png" class="img-fluid"/></div>
                                         <div class="swiper-slide"><img src="assets/layers-demo/background/BG2.png" class="img-fluid"/></div>
@@ -327,11 +314,12 @@
                 </div>
             </div>
 
-            <div class="col-lg-3">
-                <div class="d-flex flex-column align-items-center justify-content-between h-100">
-                    <div class="col-lg-8 dress-accessory-box move-up-half bg-accessory-linear">
+            <div class="col-12 col-lg-3">
+                <div class="d-flex flex-row flex-lg-column align-items-center justify-content-around justify-content-lg-between h-100">
+
+                    <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x25 mv-up-lg-0x5 bg-accessory-linear">
                         <!-- 配件 hair -->
-                        <div class="swiper dress-hair">
+                        <div class="swiper dress-hair radius-1x5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="assets/layers-demo/hair/H2.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/hair/H3.png" class="img-fluid"/></div>
@@ -339,15 +327,14 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/hair/H9.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/hair/H10.png" class="img-fluid"/></div>
                             </div>
-                            <div class="swiper-pagination"></div>
-                            <div class="swiper-scrollbar"></div>
                         </div>
-                        <div class="swiper-button-prev dress-hair scale-2x0 move-left-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-hair scale-2x0 move-right-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-hair scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-hair scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
                     </div>
-                    <div class="col-lg-8 dress-accessory-box move-down-half bg-accessory-linear">
+
+                    <div class="col-4 col-sm-3 col-lg-8 dress-accessory-box mv-down-2x25 mv-down-lg-0x5 bg-accessory-linear">
                         <!-- 配件 background -->
-                        <div class="swiper dress-background">
+                        <div class="swiper dress-background radius-1x5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide"><img src="assets/layers-demo/background/BG1.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/background/BG2.png" class="img-fluid"/></div>
@@ -355,16 +342,16 @@
                                 <div class="swiper-slide"><img src="assets/layers-demo/background/BG4.png" class="img-fluid"/></div>
                                 <div class="swiper-slide"><img src="assets/layers-demo/background/BG5.png" class="img-fluid"/></div>
                             </div>
-                            <div class="swiper-pagination"></div>
-                            <div class="swiper-scrollbar"></div>
                         </div>
-                        <div class="swiper-button-prev dress-background scale-2x0 move-left-4 btn shadow-none text-white"><</div>
-                        <div class="swiper-button-next dress-background scale-2x0 move-right-4 btn shadow-none text-white">></div>
+                        <div class="swiper-button-prev dress-background scale-2x0 mv-left-lg-4 btn shadow-none text-white"><</div>
+                        <div class="swiper-button-next dress-background scale-2x0 mv-right-lg-4 btn shadow-none text-white">></div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
+
 
     <!-- 第十四部分 成為家族中的一員-->
     <div class="container py-5">
@@ -378,7 +365,6 @@
     </div>
 
 </div>
-
 
 
 <!-- 第十五部分 成為家族中的一員-->
@@ -418,7 +404,7 @@
                 <!-- 10% -->
                 <div class="row py-5 mb-3">
                     <div class="col-12 col-lg-5">
-                        <img src="assets/image/cute_ghost_1.png" />
+                        <img src="assets/image/cute_ghost_1.png"/>
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
@@ -435,7 +421,7 @@
                 <!-- 20% -->
                 <div class="row py-5 mb-3">
                     <div class="col-12 col-lg-5">
-                        <img src="assets/image/cute_ghost_2.png" />
+                        <img src="assets/image/cute_ghost_2.png"/>
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
@@ -451,7 +437,7 @@
                 <!-- 50% -->
                 <div class="row py-5 mb-3">
                     <div class="col-12 col-lg-5">
-                        <img src="assets/image/cute_ghost_3.png" />
+                        <img src="assets/image/cute_ghost_3.png"/>
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
@@ -467,7 +453,7 @@
                 <!-- 75% -->
                 <div class="row py-5 mb-3">
                     <div class="col-12 col-lg-5">
-                        <img src="assets/image/cute_ghost_4.png" />
+                        <img src="assets/image/cute_ghost_4.png"/>
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
@@ -483,7 +469,7 @@
                 <!-- 100% -->
                 <div class="row py-5 mb-3">
                     <div class="col-12 col-lg-5">
-                        <img src="assets/image/cute_ghost_5.png" />
+                        <img src="assets/image/cute_ghost_5.png"/>
                     </div>
                     <div class="col-12 col-lg-7">
                         <div class="d-flex flex-column align-items-start px-5 ps-lg-0 align-items-center align-items-lg-start">
@@ -664,14 +650,13 @@
     </ul>
 </div>
 
-</body>
 <footer class="bg-foot">
     <div class="container-fluid d-none d-xl-block">
         <div class="row">
             <div class="col-12">
                 <div class="d-flex flex-row justify-content-center">
                     <a href="#" class="footer-brand">
-                        <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo" />
+                        <img src="assets/logo/LOGO-W.png" height="48" alt="WANA-Logo"/>
                     </a>
 
                     <div class="d-flex flex-row align-items-center">
@@ -701,7 +686,7 @@
             <div class="col-6 col-lg-4 offset-3 offset-lg-4 pt-3 pt-sm-5">
                 <div class="row justify-content-center">
                     <div class="col-3">
-                        <img src="assets/logo/WANA_LOGO.png" class="img-fluid" alt="WANA-Logo" />
+                        <img src="assets/logo/WANA_LOGO.png" class="img-fluid" alt="WANA-Logo"/>
                     </div>
                 </div>
                 <ul class="d-flex flex-column list-unstyled footer-menu text-center mt-3 pt-3 pt-sm-5">
@@ -718,9 +703,10 @@
     </div>
     <hr class="text-white">
     <div class="row text-center">
-        <div class ="text-white">@ 2022 WANA</div>
+        <div class="text-white">@ 2022 WANA</div>
     </div>
 </footer>
+</body>
 </html>
 
 <script src="script.js"></script>
