--- a/v1/index.html
+++ b/v1/index.html
@@ -77,7 +77,7 @@
 </nav>
 
 <!-- 第二部分 Join discord -->
-<div class="container-fluid full-layout bg-full position-relative" style="background-image: url('v1/assets/image/main.gif')">
+<div class="container-fluid full-layout bg-full position-relative" style="background-image: url('assets/image/main.gif')">
     <!-- 品牌動圖 -->
     <div class="join-discord-btn d-flex justify-content-center">
         <div class="btn btn-primary btn-xxl bg-brand-linear border-0">
@@ -109,7 +109,7 @@
 <div class="container text-start">
     <div class="row mb-5">
         <div class="col-12 col-lg-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('v1/assets/image/animate_1.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_1.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -120,7 +120,7 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-5 order-first order-lg-last">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('v1/assets/image/animate_2.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_2.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -131,7 +131,7 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-5">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('v1/assets/image/animate_3.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_3.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
@@ -142,7 +142,7 @@
 
     <div class="row mb-5">
         <div class="col-12 col-lg-5 order-first order-lg-last">
-            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('v1/assets/image/animate_4.png')"></div>
+            <div class="animate-on-hover banner-layout bg-full" style="background-image: url('assets/image/animate_4.png')"></div>
         </div>
         <div class="col-12 col-lg-7">
             <p class="banner-layout d-flex align-items-center text-white banner-text-h6 ps-md-5 ms-lg-5">
