--- a/v1/index.html
+++ b/v1/index.html
@@ -9,12 +9,12 @@
     <meta property="og:title" content="WANA NFT"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="WANA! Create your own WAvatar."/>
-    <meta property="og:image" content="https://wanawallet.co/assets/logo/WANA_LOGO.png">
+    <meta property="og:image" content="https://wanawallet.co/v1/assets/logo/WANA_LOGO.png">
     <link rel="icon" type="image/x-icon" href="assets/logo/WANA_LOGO.png">
     <link rel="stylesheet" href="../lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../lib/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="../lib/aos/aos.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="style.css">
     <script src="../lib/bootstrap/bootstrap.bundle.js"></script>
     <script src="../lib/swiper/swiper-bundle.js"></script>
