--- a/v1/index.html
+++ b/v1/index.html
@@ -650,8 +650,8 @@
     </ul>
 </div>
 
-<footer class="bg-foot">
-    <div class="container-fluid d-none d-xl-block">
+<footer class="container-fluid bg-foot">
+    <div class="d-none d-xl-block">
         <div class="row">
             <div class="col-12">
                 <div class="d-flex flex-row justify-content-center">
@@ -681,7 +681,7 @@
         </div>
 
     </div>
-    <div class="container-fluid d-block d-xl-none">
+    <div class="d-block d-xl-none">
         <div class="row">
             <div class="col-6 col-lg-4 offset-3 offset-lg-4 pt-3 pt-sm-5">
                 <div class="row justify-content-center">
