mobile main image

--- a/v2/index.html
+++ b/v2/index.html
@@ -45,7 +45,7 @@
     </div>
 </nav>
 <!-- 主圖 -->
-<div class="container-fluid full-layout bg-full position-relative px-0" style="background-image: url('assets/image/main_website.png')">
+<div class="container-fluid full-layout bg-full position-relative main-image px-0">
     <nav class="d-none d-xl-block navbar navbar-expand-xl navbar-dark bg-cap-trans px-3">
         <div class="align-items-center w-100 bg-transparent">
             <div class="row">
