入住 WANA 星之前，需要知道的事

--- a/v2/index.html
+++ b/v2/index.html
@@ -46,13 +46,13 @@
 </nav>
 <!-- 主圖 -->
 <div class="container-fluid full-layout bg-full position-relative main-image px-0">
-    <nav class="d-none d-xl-block navbar navbar-expand-xl navbar-dark bg-cap-trans px-3">
+    <nav class="d-none d-xl-block navbar navbar-expand-xl navbar-dark bg-cap-trans px-4">
         <div class="align-items-center w-100 bg-transparent">
             <div class="row">
                 <div class="col-3">
                     <div class="d-flex flex-row">
                         <a href="#" class="navbar-brand">
-                            <img src="assets/logo/WANA_LOGO.png" height="34" alt="WANA-Logo"/>
+                            <img src="assets/logo/WANA_LOGO_banner.png" height="34" alt="WANA-Logo"/>
                         </a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
 <!-- Mint Coming soon... -->
 <div class="container d-flex justify-content-center position-relative mv-up-9">
     <div class="col-10 bg-base mint-coming-soon">
-        <h3 class="text-white h1">0 / 999</h3>
+        <h3 class="text-white h1">0 / Coming Soon...</h3>
         <div class="text-white mb-2 h4 py-3">Mint Coming Soon...</div>
         <div class="progress">
             <div class="progress-bar mint-progress-bar bg-brand" style="width: 1%"></div>
@@ -94,6 +94,35 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center py-5 my-5">
+            <div class="d-none d-lg-block">
+                <h1 class="banner-text-h1">入住 WANA 星之前，需要知道的事</h1>
+            </div>
+            <div class="d-block d-lg-none">
+                <h1 class="banner-text-h1">入住 WANA 星之前，</h1>
+                <h1 class="banner-text-h1">需要知道的事</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-around align-items-center">
+        <div class="col-12 col-lg-4 order-lg-last text-center">
+            <img src="assets/image/about_1.png" class="img-fluid"  alt="about wana"/>
+        </div>
+        <div class="col-12 col-lg-7">
+            <h3 class="banner-text-h6">WANA 是人類發現的第一顆具有生命、有語言甚至有文化的新星！在WANA星上的居民稱作 WAVATAR ，並用「WANA！」作為打招呼，據調查發現總數為 11400 隻。</h3>
+        </div>
+    </div>
+    <div class="row justify-content-around align-items-center">
+        <div class="col-12 col-lg-4">
+            <img src="assets/image/about_2.gif" class="img-fluid"  alt="about wana"/>
+        </div>
+        <div class="col-12 col-lg-7">
+            <h3 class="banner-text-h6">WAVATAR 都能改變自己的樣貌，隨著不同的心情組合出喜愛的種類，目前已調查出貓族、鳥族、熊族、猴族還有許多人類無法言喻的種族等著你發現！ WANA 星正孕育一個正向、溫暖的藏身處，讓每位入籍者都能抒發心情、傳遞理想、提供建議，甚至還能因此獲得回饋！</h3>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
